@@ -6,6 +6,8 @@ Revision history for {{$dist->name}}:
 
   - Updated backup_files rule.
 
+  - Added Windows META-INF and OS/X __MAXOSX to system_dirs rule.
+
 v0.8.0    2022-06-21 16:36:30+01:00 Europe/London
   [Enhancements]
   - Added .bkp, .backup, .npb, .old, .psb and .psc to the misc_extensions rule.
